[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project #1 - Brain games"
authors = ["Alina Makarovskaya <makarovskaya1307@gmail.com>"]
repository = "https://github.com/makaralina/python-project-49.git"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flake8",
  "License :: Free for non-commercial use",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
